# kalairos

./: .gitignore  .npmignore  BENCH.md  CHANGELOG.md  CLAUDE.md  README.md  SYSTEM-DESIGN.md  TEMP_CHANGELOG.md  agent.js  auth.js  embedder.js  errors.js  filters.js  index.js  index.mjs  kernel.js  llms.txt  markdown.js  mcp.js  mcp.mjs  package-lock.json  package.json  remote.js  remote.mjs  server.js  server.mjs  test-agent-simulation.js  test-basic.js  test-sqlite-index.js  test-sqlite-integration.js  test-temporal-behavior.js  test-versioning.js  trail.js  trust.js  versioning.js
bench/: RESULTS.md  latency-results.json  latency.js
docs/: blog-poisoning-benchmark.md
examples/: demo.js  desktop-tidy.js  (+1 more)
python/: pyproject.toml
python/bench/: observability.py
python/examples/: hello_agent.py  pr_risk_analyzer.py  pr_risk_graph_demo.py
python/src/kalairos/: __about__.py  __init__.py  agent.py  control_plane.py  entity_normalizer.py  executor.py  jsonl.py  ledger.py  llm.py  replay.py  run.py  schema.py  server.py  sqlite_index.py  tool.py  versioning.py  workflow_graph.py
python/src/kalairos/agents/: __init__.py  pr_risk.py
python/tests/: test_agent.py  test_control_plane.py  test_decision_tree.py  test_entity_normalizer.py  test_executor.py  test_graph_viz.py  test_handoff.py  test_integration.py  test_jsonl.py  test_ledger.py  test_live_write.py  test_llm.py  test_observability_bench.py  test_pr_risk_agent.py  test_pr_risk_graph.py  test_rebuild_from.py  test_replay.py  test_run.py  test_server.py  test_smoke.py  test_sqlite_index.py  test_sse.py  test_tool.py  test_workflow_graph.py
(+28 files in other folders)
