[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kalairos"
version = "0.0.1"
description = "Python kernel + agent runtime for the Kalairos memory engine"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Krishna Labs", email = "main@krishnalabs.ai" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/kalairos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
