[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kalairos"
version = "0.0.1"
description = "Python kernel + agent runtime for the Kalairos memory engine"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Krishna Labs", email = "main@krishnalabs.ai" }]
dependencies = []

[project.optional-dependencies]
# `llm` pulls the Anthropic SDK for the LLMLoop (Phase 2.4). Kept
# optional so the storage spine (Ledger / JsonlAppender / SqliteStreamer
# / LedgerServer) can be installed without the LLM dependencies.
llm = ["anthropic>=0.40"]
# `dev` includes everything needed to run the full test suite — pytest
# plus the LLM dependencies (test_llm uses the anthropic types via a
# fake client but imports cleanly when anthropic is on the path).
dev = ["pytest>=8", "anthropic>=0.40"]

[tool.hatch.build.targets.wheel]
packages = ["src/kalairos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
